--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <p>Nama: <strong>Farell Daffa Aditya</strong></p>
           <p>TTL: Semarang, 10 Januari 2006</p>
           <p>
-            Deskripsi: Mahasiswa mahasiswa Politeknik Teknik Negeri Bandung
+            Deskripsi: Mahasiswa Politeknik Teknik Negeri Bandung
             Jurusan Komputer dan Informatika.
           </p>
           <p>Hobi: Game</p>
